jersey2 lib